# VulkanInitializationLib

./: .gitignore  CMakeLists.txt  main.cpp
core/entryPoint/: GameApplicationRunner.cpp  GameApplicationRunner.h
core/initrequestmodel/: VulkanInitalizationRequestModel.h
core/logic/: VulkanInitializationEntryPoint.cpp  VulkanInitializationEntryPoint.h
core/logic/command/: CommandPoolInitializer.cpp  CommandPoolInitializer.h
core/logic/graphicsPipeline/: GraphicsPipelineInitializer.cpp  GraphicsPipelineInitializer.h
core/logic/ioc/: IocContainer.cpp  IocContainer.h
core/logic/layersAndExtensions/: LayersAndExtensionsManagerFactory.cpp  LayersAndExtensionsManagerFactory.h  VkInstanceLayersProvider.cpp  VkInstanceLayersProvider.h
core/logic/logicalDevice/: VkLogicalDeviceManager.cpp  VkLogicalDeviceManager.h  VkLogicalDeviceProvider.cpp  VkLogicalDeviceProvider.h
core/logic/logicalDevice/createInfo/: VkLogicalDeviceCreateInfoProvider.cpp  VkLogicalDeviceCreateInfoProvider.h  VkLogicalDeviceQueueCreateInfoProvider.cpp  VkLogicalDeviceQueueCreateInfoProvider.h
core/logic/physicalDevice/: VkPhysicalDeviceDetector.cpp  VkPhysicalDeviceDetector.h  VkPhysicalDeviceExtensionsExtractor.h  VkPhysicalDeviceManager.cpp  VkPhysicalDeviceManager.h  VkPhysicalDevicePropertiesExtractor.cpp  VkPhysicalDevicePropertiesExtractor.h
core/logic/physicalDevice/propertiesExtractors/: VkPhysicalDeviceExtensionsExtractor.cpp  VkPhysicalDeviceExtensionsExtractor.h
core/logic/queueFamilies/: QueueFamiliesController.cpp  QueueFamiliesController.h
core/logic/renderPass/: RenderPassInitializer.cpp  RenderPassInitializer.h
core/logic/swapChain/: FrameBuffersManager.cpp  FrameBuffersManager.h  VkSwapChainManager.cpp  VkSwapChainManager.h
core/logic/vkInstance/: VkInstanceManager.cpp  VkInstanceManager.h  VkInstanceProvider.cpp  VkInstanceProvider.h
core/logic/vkInstance/createInfo/: VkInstanceCreateInfoFactory.cpp  VkInstanceCreateInfoFactory.h  VkInstanceCreateInfoProvider.cpp  VkInstanceCreateInfoProvider.h
core/modules/: VulkanInterface.cpp  VulkanInterface.h
core/modules/commands/: CommandBufferManager.cpp  CommandBufferManager.h
core/modules/graphicsPipeline/: GraphicsPipelineInterface.cpp  GraphicsPipelineInterface.h
core/modules/layersAndExtensions/: LayersAndExtensionsManager.cpp  LayersAndExtensionsManager.h  LayersPrintUtil.h  VkInstanceLayersWrapper.cpp  VkInstanceLayersWrapper.h
core/modules/logicalDevice/: VkDeviceRepresentation.cpp  VkDeviceRepresentation.h  VkLogicalDeviceRepresentation.cpp  VkLogicalDeviceRepresentation.h
core/modules/physicalDevice/: VkPhysicalDeviceRepresentation.cpp  VkPhysicalDeviceRepresentation.h  VkPhysicalDeviceWrapper.cpp  VkPhysicalDeviceWrapper.h
core/modules/swapChain/: SwapChainHandler.cpp  SwapChainHandler.h
core/modules/vkinstance/: VkInstanceWrapper.cpp  VkInstanceWrapper.h
core/outputwindow/: OutputWindowInterface.h
core/outputwindow/impl/glfw/: GlfwOutputWindow.cpp  GlfwOutputWindow.h  GlfwWindowInitializer.cpp  GlfwWindowInitializer.h
core/outputwindow/init/: OutputWindowInitializer.h
core/shaders/: ShaderLoader.cpp  ShaderLoader.h
core/shaders/resources/: compile.bat  shader.frag  shader.vert  vert.spv
core/utils/: VulkanInitializationErrorMessageUtils.h
theory/swapchain/: Swapchain.txt  SwapchainFlow.txt
